added assignments for day6